# Epson-Dimension-Quality-Inspection-System

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: frontend.yml
Agent/: .env.example  .gitignore  README.md  agent_link.py  computer_vision.py  config.py  event_buffer.py  requirements.txt  transport.py  vision.py
Backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
Backend/migrations/: 20240101000001_initial.up.sql  20240101000002_drop_payload.up.sql  20240101000002_jakarta_timezone.up.sql  20240101000003_purge_plaintext_users.up.sql  20240101000004_stations_running.up.sql  20240101000005_drop_alerts_phase.up.sql  20240101000006_inspection_detections.up.sql  20240101000008_stations_is_active.up.sql  20240101000009_timescaledb_hypertable.up.sql  20240101000010_drop_shift_batch.up.sql
Backend/src/: config.rs  error.rs  ingestion.rs  main.rs  main.ts  migrate.ts
Backend/src/auth/: extract.rs  jwt.rs  mod.rs  service.rs
Backend/src/config/: env.ts
Backend/src/domain/: mod.rs  schemas.ts  types.rs  types.ts  validation.rs
Backend/src/http/: mod.rs  response.rs  router.rs  routes.ts  server.ts
Backend/src/http/handlers/: agents.rs  auth.rs  dashboard.rs  health.rs  inspections.rs  mod.rs  parts.rs  quality_records.rs  stations.rs  users.rs
Backend/src/mqtt/: mqtt-ingestion.ts
Backend/src/realtime/: agent-registry.ts  agent-ws.ts  agent_registry.rs  event-bus.ts  event_bus.rs  frame-bus.ts  frame-ws.ts  frame_bus.rs  mod.rs  websocket.ts  ws_agent.rs  ws_event.rs  ws_frame.rs
Backend/src/services/: auth-service.ts  ingestion-service.ts
Backend/src/storage/: index.ts  json-store.ts  memory-store.ts  mod.rs  object_store.rs  postgres-store.ts  postgres.rs  seed.rs  seed.ts  store.ts
Backend/src/utils/: ids.ts
Frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
Frontend/src/: App.svelte  app.css  main.ts  vite-env.d.ts
Frontend/src/app/: App.tsx  env.d.ts  routes.tsx
Frontend/src/app/components/: Layout.tsx  RequireAuth.tsx
Frontend/src/app/context/: AuthContext.tsx  ThemeContext.tsx
Frontend/src/app/data/: mock-data.ts
Frontend/src/app/hooks/: useAgents.ts  useAlerts.ts  useBatches.ts  useDashboardSummary.ts  useFrameStream.ts  useInspections.ts  useParts.ts  useQualityRecords.ts  useShiftSchedules.ts  useStations.ts  useUsers.ts
Frontend/src/routes/: DashboardPage.svelte  HistoryPage.svelte  LiveTrackingPage.svelte  LoginPage.svelte  PartConfigurationPage.svelte  PartEditorPage.svelte  QualityTrackingPage.svelte  UserEditorPage.svelte  UserManagementPage.svelte
Frontend/src/styles/: index.css
Proxy/: nginx.conf
docs/optimization-planning/: 00-PRD-DimInspect-Optimization.md  01-Detailed-Designs.md  02-Edge-Cases-and-Mitigations.md  03-Rollout-and-Migration.md
(+36 files in other folders)
