[package]
name = "diminspect-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-credential-types = "=1.2.1"
aws-runtime = "=1.4.4"
aws-sdk-s3 = { version = "=1.65.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }
aws-sigv4 = "=1.2.6"
aws-smithy-async = "=1.2.1"
aws-smithy-checksums = "=0.60.13"
aws-smithy-eventstream = "=0.60.5"
aws-smithy-http = "=0.60.11"
aws-smithy-json = "=0.61.1"
aws-smithy-runtime = "=1.7.4"
aws-smithy-runtime-api = "=1.7.3"
aws-smithy-types = "=1.2.9"
aws-smithy-xml = "=0.60.9"
aws-types = "=1.3.3"
axum = { version = "0.8", features = ["macros", "ws"] }
bcrypt = "0.16"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
dotenvy = "0.15"
futures-util = "0.3"
indexmap = "=2.7.1"
jsonwebtoken = { version = "=9.3.1", default-features = false }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json", "migrate", "rust_decimal"] }
thiserror = "2"
time = "=0.3.36"
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-br", "compression-deflate", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "=2.5.2"
urlencoding = "2"
uuid = { version = "=1.11.0", features = ["v4", "serde"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
