[package]
name = "diminspect-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65"
aws-smithy-types = "1.2"
axum = { version = "0.8", features = ["macros", "ws"] }
bcrypt = "0.16"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dashmap = "6"
dotenvy = "0.15"
futures-util = "0.3"
jsonwebtoken = "9"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json", "migrate", "rust_decimal"] }
thiserror = "2"
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-br", "compression-deflate", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
